test/errors/opcode.rom
Error in `opcode.asm` on line 2: Unknown opcode `BLA`
